2007-04-01  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/anim.py: fixed missing pixmap
	* src/boards/python/chat.py: fixed missing translation
	* src/boards/python/redraw.py: fixed missing pixmap
	* src/boards/submarine.c: (submarine_create_item),
	(update_timeout), (update_timeout_slow),
	(update_timeout_very_slow), (quit_after_delay), (ok): Fixed to properly pause
	when entering the help, even when the bonus is gone and the submarine sinks.

2007-04-01  Yves Combe <yves@ycombe.net>

	interact with NS main menu. untested yet.

	* configure.in:
	* src/gcompris/gcompris-nsbundle.m:

2007-04-01  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for no double instance run.
	Now by default GCompris won't run again if started less than 30
	seconds after a previous one.
	This can be disable with --nolockcheck

	* src/gcompris/gcompris.c: (main):

2007-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Indonesian voices by Dessy Widyasari - cidut_dsy on yahoo : com

	* boards/sounds/id/*:

2007-03-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: Added missing files.

2007-03-27  Yves Combe <yves@ycombe.net>

	add a missing file.

	* macosx/GCompris.icns:

2007-03-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed missing translation of the country map names.

	* boards/geography_country/board1_0.xml.in:
	* boards/geography_country/board3_0.xml.in:
	* boards/geography_country/board4_0.xml.in:
	* boards/geography_country/board5_0.xml.in:
	* boards/geography_country/board5_1.xml.in:
	* boards/geography_country/board5_2.xml.in:
	* boards/imagename/board5_0.xml.in:

2007-03-27  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2007-03-27  Yves Combe <yves@ycombe.net>

	add a --without-readlines option to gnuchess, to fix a crash from it on osx.

	* macosx/build-gtk.sh:

2007-03-27  Yves Combe <yves@ycombe.net>

	Add initials CFLAGS to OBJCFLAGS. Usefull for universal binary.

	* configure.in:
